# gargantua

./: .gitignore  Cargo.toml  README.md
docs/: API.md  INTEGRATION.md  PEDERSEN_VS_ELGAMAL.md  PROTOCOL.md  SECURITY.md
sdk/: .eslintrc.js  README.md  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
sdk/examples/: advanced.ts  basic.ts
sdk/src/: account.ts  client.ts  constants.ts  errors.ts  index.ts  instructions.ts  proof.ts  types.ts  utils.ts
sdk/tests/: account.test.ts  client.test.ts  setup.ts
src/: bulletproof.rs  constraint_system.rs  curve_ops.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
tests/: bulletproof_test.rs  comprehensive_test.rs  constraint_system_test.rs  curve_ops_test.rs  integration_test.rs
