[package]
name = "zerosol-solana"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.17"
borsh = "0.10"
thiserror = "1.0"
arrayref = "0.3"
num-derive = "0.4"
num-traits = "0.2"
curve25519-dalek = "4.0"
sha2 = "0.10"
spl-token = "4.0"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"
tokio = "1.0"